# rf-detr-ort

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml.example
.github/workflows/: ci.yml
examples/: detect_image.rs
src/: config.rs  engine.rs  error.rs  lib.rs  main.rs  pipeline.rs  postprocess.rs  preprocess.rs
